--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f71d5936b10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe864c50950&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f71d5906090&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f71d5906290&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe8648ad250&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe8648ad450&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f71d5ea49d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f71d5ea4bd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe864e5db90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe864e5dd90&gt;]</pre>
 </div>
 
 </div>
