--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f024e4b1fd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8e39cf8910&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f024e79a150&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f024e79a350&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8e39cb5210&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8e39cb5390&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f024ed4aa10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f024ed4ac10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8e3a257ad0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8e3a257c50&gt;]</pre>
 </div>
 
 </div>
