--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fde31d74450&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f03cf175410&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fde32074f10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fde32091150&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f03cee6e550&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f03cee6e350&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fde3263f890&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fde3263fa90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f03cf411dd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f03cf411bd0&gt;]</pre>
 </div>
 
 </div>
