--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff26672e890&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8c63e9e390&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff2669fa1d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff2669fa3d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8c6418e150&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8c6418e050&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff266fada90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff266fadc90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8c6472ba90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8c6472b890&gt;]</pre>
 </div>
 
 </div>
