--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f94f0579d50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb3074a48d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f94f0872310&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f94f0872510&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb307ace610&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb307774450&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f94f0e0fcd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f94f0e0fed0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb307d5f6d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb307d22d50&gt;]</pre>
 </div>
 
 </div>
