--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff504caec10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1002d09050&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff504fb5190&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff504fb5390&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f10032b2f50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f10032e3190&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff505553a10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff505553c10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f10038cbad0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1003882a50&gt;]</pre>
 </div>
 
 </div>
