--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb0e40e69d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fcbf66b3a10&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb0e3dc0190&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb0e3dc0390&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fcbf6380090&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fcbf6380290&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb0e4374a50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb0e4374c50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fcbf692ba90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fcbf692bc90&gt;]</pre>
 </div>
 
 </div>
