--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb1ea49f3d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ffa8fe0cf90&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb1ea148f90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb1ea1651d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ffa8fdc61d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ffa8fdc63d0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb1ea718850&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb1ea718a50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ffa90379a10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ffa90379c10&gt;]</pre>
 </div>
 
 </div>
