--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f82e53a9950&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd5551a2290&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f82e5971150&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f82e5971350&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd55547c310&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd55547c510&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f82e5f0da10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f82e5f0dc10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd555a2ac10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd555a2ae10&gt;]</pre>
 </div>
 
 </div>
