--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fbbb6574150&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc7a7952b90&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fbbb68580d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fbbb68582d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc7a7618190&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc7a7618390&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fbbb6e05a10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fbbb6e05c10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc7a7bc7b10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc7a7bc7d10&gt;]</pre>
 </div>
 
 </div>
