--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f30d9c73f90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff94eb99810&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f30d9f672d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f30d9f67510&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff94eb53350&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff94eb53590&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f30da509b90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f30da509dd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff94f104c10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff94f104e50&gt;]</pre>
 </div>
 
 </div>
