--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f35a97d6d10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8a34148910&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f35a94af110&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f35a98009d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8a33e0d250&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8a33e0d450&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f35a9a4ba50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f35a9a879d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8a343c0ad0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8a343c0cd0&gt;]</pre>
 </div>
 
 </div>
