--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7961b02450&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6e7e8e11d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7961e1fb90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7961ac1190&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f6e7e5b0290&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f6e7e5b0490&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f79620aa950&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f796206da90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f6e7eb60c10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f6e7eb60e10&gt;]</pre>
 </div>
 
 </div>
