--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7c848c2bd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fec5bbd6750&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7c848712d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7c848714d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fec5bb87110&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fec5bb87350&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7c84e1fc50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7c84e1fe50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fec5c136a90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fec5c136cd0&gt;]</pre>
 </div>
 
 </div>
