--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f5dbad2c7d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2b32116f10&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f5dbaa271d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f5dbaa273d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f2b3276a410&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2b323f4350&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f5dbafd8b10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f5dbafd8d10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f2b329d6cd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2b329a7b90&gt;]</pre>
 </div>
 
 </div>
