--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa584b1c690&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7faf420d0c90&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa5850bf1d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa5850bf3d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7faf42096050&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7faf42096250&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa585670a90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa585670c90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7faf42634a50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7faf42634c50&gt;]</pre>
 </div>
 
 </div>
